--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>projet6 javascript</title>
 </head>
 <body>
-	<input type="button" onclick="color()" value="Start / Stop">
-	<script type="text/javascript" src="JS.js" defer>	</script>
+	<input type="button" onclick="startOrStop()" value="Start / Stop">
+	<script type="text/javascript" src="JS.js" defer></script>
 </body>
 </html>
